# SPFR

./: CMakeLists.txt  README.md  build.sh  clean_project.sh  fresh_build.sh
example_config/: test.config
include/: readConfig.hpp
src/: readConfig.cpp
test/: cmake_config.h.in  test.cpp
